--- a/labapp/templates/contact.html
+++ b/labapp/templates/contact.html
@@ -1,32 +1,32 @@
-{% extends "layout.html" %}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>О проекте</title>
+    <link rel="stylesheet" href="C:/Users/Honor/source/repos/Laba6_PiCPO/labapp/static/stylesheets/styles.css">
+</head>
+<body>
+    <div class="wrapper">
+        <header>
+            <a href="/"><img src="C:/Users/Honor/source/repos/Laba6_PiCPO/labapp/static/images/youtube.png" alt="Whitesquare logo"></a>
+            <center>
+                <a class="link1" href="index.html">Подбор фильма</a>
+            </center>
+        </header>
+        <nav>
+            <center>
+                <a class="link1" href="index.html">Главная</a>
+                <a class="link1" href="contact.html">О проекте</a>
+            </center>
 
-{% block content %}
-
-    <aside>
-        <h2>YOUR REQUEST STATUS</h2>
-        <p id="statusfield"><img src="/static/images/bg1.png" width="230" height="180" alt="Our offices"></p>
-    </aside>
-    <section>
-        <form id="contactform">
-            <fieldset>
-                <legend>CONTACT US</legend>
-                <p><label for="fname">Имя :     </label><br><input type="text" name="fname"></p>
-                <p><label for="lname">Фамилия : </label><br><input type="text" name="lname"></p>
-                <p><label for="email">E-mail :  </label><br><input type="email" name="email"></p>
-                <p>
-                <label>Тип запроса:</label><br>
-                <select name="reqtype">
-                    <option>Сотрудничество</option>
-                    <option>Техническая информация</option>
-                    <option>Ошибка на сайте</option>
-                </select>
-                </p>
-                <p><b>Введите текст запроса:</b></p>
-                <p><textarea rows="10" cols="45" name="reqtext"></textarea></p>
-            </fieldset>
-            <p><input type="submit" id="sendbtn" value="Отправить"></p>
-        </form>		
-    </section>
-    <script type="text/javascript" src="/static/javascripts/formsend.js"></script>
-
-{% endblock %}
+        </nav>
+        <main>
+            <center>
+                <p>Cайт был выполнен в рамках проекта по предмету ПиКПО</p>
+                <p>Студенткой группы ПРО-327</p>
+                <p>Шангараевой Аделией Ильнуровной</p>
+            </center>
+        </main>
+    </div>
+</body>
+</html>
