--- a/labapp/templates/layout.html
+++ b/labapp/templates/layout.html
@@ -1,9 +1,9 @@
-<html>
+﻿<html>
 
 <head>
 		<meta charset="utf-8">
 		<title>{{title}}</title>
-		<link rel="stylesheet" href="/static/stylesheets/styles.css">
+		<link rel="stylesheet" href="C:\Users\Honor\source\repos\Laba6_PiCPO\labapp\static\stylesheets/styles.css">
 		<script type="text/javascript" src="/static/javascripts/jquery-3.6.0.min.js"></script>
 </head>
 		<body>
